--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lsystems = "0.2.1"
 nannou = "0.18.1"
 noise = "0.8.2"
 rand = "0.8.5"
